{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 116,
  "lineage": "88fafdee-0e36-d02a-3c62-90927c0087f2",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web_lb_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.app_spoke",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-app-vnet/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "jd-rg",
            "virtual_network_name": "jd-app-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.app_spoke.azurerm_virtual_network.app_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.app_spoke",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "app_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1b931b17-3128-485a-a0d6-2efe397866fe",
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-app-vnet",
            "location": "eastus",
            "name": "jd-app-vnet",
            "resource_group_name": "jd-rg",
            "subnet": [
              {
                "address_prefix": "10.2.1.0/24",
                "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-app-vnet/subnets/app-subnet",
                "name": "app-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg"
          ]
        }
      ]
    },
    {
      "module": "module.app_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/networkInterfaces/app-nic-0",
            "internal_domain_name_suffix": "c2nzggzigfnerigwf15ds4dg5g.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.2.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-app-vnet/subnets/app-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "app-nic-0",
            "private_ip_address": "10.2.1.6",
            "private_ip_addresses": [
              "10.2.1.6"
            ],
            "resource_group_name": "jd-rg"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.app_spoke.azurerm_subnet.app_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/networkInterfaces/app-nic-1",
            "internal_domain_name_suffix": "c2nzggzigfnerigwf15ds4dg5g.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.2.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-app-vnet/subnets/app-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "app-nic-1",
            "private_ip_address": "10.2.1.5",
            "private_ip_addresses": [
              "10.2.1.5"
            ],
            "resource_group_name": "jd-rg"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.app_spoke.azurerm_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app_vm",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web_lb_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.db_spoke",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.3.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-db-vnet/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "jd-rg",
            "virtual_network_name": "jd-db-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.db_spoke.azurerm_virtual_network.db_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.db_spoke",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "db_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.3.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2a9b5b2b-1cac-4f1f-8d4e-fad32cd70683",
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-db-vnet",
            "location": "eastus",
            "name": "jd-db-vnet",
            "resource_group_name": "jd-rg",
            "subnet": [
              {
                "address_prefix": "10.3.1.0/24",
                "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-db-vnet/subnets/db-subnet",
                "name": "db-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg"
          ]
        }
      ]
    },
    {
      "module": "module.db_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/networkInterfaces/db-nic-0",
            "internal_domain_name_suffix": "fnnzwkvmdqpu5dko5ljszvygqd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.3.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-db-vnet/subnets/db-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "db-nic-0",
            "private_ip_address": "10.3.1.5",
            "private_ip_addresses": [
              "10.3.1.5"
            ],
            "resource_group_name": "jd-rg"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.db_spoke.azurerm_subnet.db_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/networkInterfaces/db-nic-1",
            "internal_domain_name_suffix": "fnnzwkvmdqpu5dko5ljszvygqd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.3.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-db-vnet/subnets/db-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "db-nic-1",
            "private_ip_address": "10.3.1.4",
            "private_ip_addresses": [
              "10.3.1.4"
            ],
            "resource_group_name": "jd-rg"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.db_spoke.azurerm_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "jd_fw_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [
              "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/azureFirewalls/jd-azure-fw"
            ],
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/firewallPolicies/jd-firewall-policy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "eastus",
            "name": "jd-firewall-policy",
            "private_ip_ranges": [],
            "resource_group_name": "jd-rg",
            "rule_collection_groups": [
              "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/firewallPolicies/jd-firewall-policy/ruleCollectionGroups/jd-fw-rules"
            ],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.jd_rg"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "jd_fw_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [],
            "firewall_policy_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/firewallPolicies/jd-firewall-policy",
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/firewallPolicies/jd-firewall-policy/ruleCollectionGroups/jd-fw-rules",
            "name": "jd-fw-rules",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "network-rules",
                "priority": 100,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [
                      "10.1.1.0/24"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "80",
                      "443"
                    ],
                    "name": "internet-to-web",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [
                      "10.2.0.0/16"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "8080"
                    ],
                    "name": "web-to-app",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [
                      "10.3.0.0/16"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "1433"
                    ],
                    "name": "app-to-db",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.2.0.0/16"
                    ],
                    "source_ip_groups": []
                  }
                ]
              }
            ],
            "priority": 100,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.firewall.azurerm_firewall_policy.jd_fw_policy"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fw_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/publicIPAddresses/jd-fw-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "168.62.49.232",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "jd-fw-ip",
            "resource_group_name": "jd-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg"
          ]
        }
      ]
    },
    {
      "module": "module.hub",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-hub-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "jd-rg",
            "virtual_network_name": "jd-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.hub.azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-hub-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "jd-rg",
            "virtual_network_name": "jd-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.hub.azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b961a27d-c032-48f0-92c5-f44f323f5fad",
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-hub-vnet",
            "location": "eastus",
            "name": "jd-hub-vnet",
            "resource_group_name": "jd-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-hub-vnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-hub-vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-app-lb/frontendIPConfigurations/app-frontend",
                "load_balancer_rules": [
                  "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-app-lb/loadBalancingRules/app-rule"
                ],
                "name": "app-frontend",
                "private_ip_address": "10.2.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-app-vnet/subnets/app-subnet"
              }
            ],
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-app-lb",
            "location": "eastus",
            "name": "jd-app-lb",
            "private_ip_address": "10.2.1.4",
            "private_ip_addresses": [
              "10.2.1.4"
            ],
            "resource_group_name": "jd-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.app_spoke.azurerm_subnet.app_subnet",
            "module.app_spoke.azurerm_virtual_network.app_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-web-lb/frontendIPConfigurations/web-frontend",
                "load_balancer_rules": [
                  "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-web-lb/loadBalancingRules/http-rule"
                ],
                "name": "web-frontend",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/publicIPAddresses/jd-web-lb-pip"
              }
            ],
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-web-lb",
            "location": "eastus",
            "name": "jd-web-lb",
            "resource_group_name": "jd-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.loadbalancer.azurerm_public_ip.web_lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "app_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-app-lb/backendAddressPools/app-backend-pool",
            "load_balancing_rules": [
              "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-app-lb/loadBalancingRules/app-rule"
            ],
            "loadbalancer_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-app-lb",
            "name": "app-backend-pool"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.app_spoke.azurerm_subnet.app_subnet",
            "module.app_spoke.azurerm_virtual_network.app_vnet",
            "module.loadbalancer.azurerm_lb.app_lb"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/networkInterfaces/jd-nic-0/ipConfigurations/internal"
            ],
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-web-lb/backendAddressPools/web-backend-pool",
            "load_balancing_rules": [
              "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-web-lb/loadBalancingRules/http-rule"
            ],
            "loadbalancer_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-web-lb",
            "name": "web-backend-pool"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.loadbalancer.azurerm_lb.web_lb",
            "module.loadbalancer.azurerm_public_ip.web_lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "app_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-app-lb/probes/app-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-app-lb/loadBalancingRules/app-rule"
            ],
            "loadbalancer_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-app-lb",
            "name": "app-probe",
            "number_of_probes": 2,
            "port": 8080,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.app_spoke.azurerm_subnet.app_subnet",
            "module.app_spoke.azurerm_virtual_network.app_vnet",
            "module.loadbalancer.azurerm_lb.app_lb"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-web-lb/probes/http-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-web-lb/loadBalancingRules/http-rule"
            ],
            "loadbalancer_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-web-lb",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.loadbalancer.azurerm_lb.web_lb",
            "module.loadbalancer.azurerm_public_ip.web_lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "app_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-app-lb/backendAddressPools/app-backend-pool"
            ],
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-app-lb/frontendIPConfigurations/app-frontend",
            "frontend_ip_configuration_name": "app-frontend",
            "frontend_port": 8080,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-app-lb/loadBalancingRules/app-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-app-lb",
            "name": "app-rule",
            "probe_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-app-lb/probes/app-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.app_spoke.azurerm_subnet.app_subnet",
            "module.app_spoke.azurerm_virtual_network.app_vnet",
            "module.loadbalancer.azurerm_lb.app_lb",
            "module.loadbalancer.azurerm_lb_backend_address_pool.app_backend",
            "module.loadbalancer.azurerm_lb_probe.app_probe"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-web-lb/backendAddressPools/web-backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-web-lb/frontendIPConfigurations/web-frontend",
            "frontend_ip_configuration_name": "web-frontend",
            "frontend_port": 80,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-web-lb/loadBalancingRules/http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-web-lb",
            "name": "http-rule",
            "probe_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/loadBalancers/jd-web-lb/probes/http-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.loadbalancer.azurerm_lb.web_lb",
            "module.loadbalancer.azurerm_lb_backend_address_pool.web_backend",
            "module.loadbalancer.azurerm_lb_probe.web_probe",
            "module.loadbalancer.azurerm_public_ip.web_lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_lb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/publicIPAddresses/jd-web-lb-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.127.63.100",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "jd-web-lb-pip",
            "resource_group_name": "jd-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_to_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-hub-vnet/virtualNetworkPeerings/hub-to-web",
            "name": "hub-to-web",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-web-vnet",
            "resource_group_name": "jd-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "jd-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.hub.azurerm_virtual_network.hub_vnet",
            "module.web_spoke.azurerm_virtual_network.web_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "web_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-web-vnet/virtualNetworkPeerings/web-to-hub",
            "name": "web-to-hub",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-hub-vnet",
            "resource_group_name": "jd-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "jd-web-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.hub.azurerm_virtual_network.hub_vnet",
            "module.web_spoke.azurerm_virtual_network.web_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.web_lb",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.web_lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "app_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.web_lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.web_lb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "app_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.web_lb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.web_lb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "app_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.web_lb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.web_route_table",
      "mode": "managed",
      "type": "azurerm_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/routeTables/jd-spoke-rt/routes/default-to-firewall",
            "name": "default-to-firewall",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "jd-rg",
            "route_table_name": "jd-spoke-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.firewall.azurerm_firewall.azure_fw",
            "module.firewall.azurerm_firewall_policy.jd_fw_policy",
            "module.firewall.azurerm_public_ip.fw_pip",
            "module.hub.azurerm_subnet.firewall_subnet",
            "module.hub.azurerm_virtual_network.hub_vnet",
            "module.web_route_table.azurerm_route_table.spoke_rt"
          ]
        }
      ]
    },
    {
      "module": "module.web_route_table",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "spoke_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/routeTables/jd-spoke-rt",
            "location": "eastus",
            "name": "jd-spoke-rt",
            "resource_group_name": "jd-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default-to-firewall",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-web-vnet/subnets/web-subnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.jd_rg"
          ]
        }
      ]
    },
    {
      "module": "module.web_route_table",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "web_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-web-vnet/subnets/web-subnet",
            "route_table_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/routeTables/jd-spoke-rt",
            "subnet_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-web-vnet/subnets/web-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.web_route_table.azurerm_route_table.spoke_rt",
            "module.web_spoke.azurerm_subnet.web_subnet",
            "module.web_spoke.azurerm_virtual_network.web_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.web_spoke",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-web-vnet/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "jd-rg",
            "virtual_network_name": "jd-web-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.web_spoke.azurerm_virtual_network.web_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.web_spoke",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "web_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f276d59e-6d13-4543-942d-74024eaed044",
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-web-vnet",
            "location": "eastus",
            "name": "jd-web-vnet",
            "resource_group_name": "jd-rg",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-web-vnet/subnets/web-subnet",
                "name": "web-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg"
          ]
        }
      ]
    },
    {
      "module": "module.web_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/networkInterfaces/web-nic-0",
            "internal_domain_name_suffix": "t1kxn2qtnvbulfbnoqbe3lwqie.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-web-vnet/subnets/web-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "web-nic-0",
            "private_ip_address": "10.1.1.5",
            "private_ip_addresses": [
              "10.1.1.5"
            ],
            "resource_group_name": "jd-rg"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.web_spoke.azurerm_subnet.web_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/networkInterfaces/jd-nic-1",
            "internal_domain_name_suffix": "fnnzwkvmdqpu5dko5ljszvygqd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Network/virtualNetworks/jd-web-vnet/subnets/web-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-0D-3A-1E-7F-07",
            "name": "jd-nic-1",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "jd-rg",
            "virtual_machine_id": "/subscriptions/d00b3bbd-b236-423c-b3e6-3ce1cf08e4c7/resourceGroups/jd-rg/providers/Microsoft.Compute/virtualMachines/jd-vm-1"
          },
          "dependencies": [
            "azurerm_resource_group.jd_rg",
            "module.web_spoke.azurerm_subnet.web_subnet",
            "module.web_spoke.azurerm_virtual_network.web_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.web_vm",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web_lb_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    }
  ]
}